# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: test-action.yml
gendiff/: __init__.py  compare_files.py  parsing_files.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixture/: json_result.txt
